# sofascrape

./: .gitignore  LICENSE  README.md  csv.csv  example_categories.json  get_football_categories_all.html  get_football_categories_all.json  get_football_categories_all.txt  get_football_categories_all1.json  get_sport_event_count.csv  get_sport_event_count.json  json.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_new_api.py  upload_package.py  upload_pypi.py  upload_testpypi.py  upload_to_pypi.py
examples/: basic_usage.py
output/: sport_football_categories.csv
sofascrape/: __init__.py  client.py
sofascrape/files/: sofascore_endpoints.csv  sofascore_endpoints.json
tests/: __init__.py  test_client.py  test_client_comprehensive.py  test_import.py
